# synology-cloud-sync-decrypt-tool

./: .README.md.swp  .Synology.py.swp  COPYRIGHTS  README.md  Synology.py  lz4installer.scpt  pyproject.toml
InstallMeFirst.app/Contents/: Info.plist
InstallMeFirst.app/Contents/Resources/: applet.rsrc
InstallMeFirst.app/Contents/Resources/Scripts/: main.scpt
syndecrypt/: SynologyCloudDecrypt.py  __init__.py  __main__.py  core.py  files.py  requirements.txt  util.py
